force-app/main/default/objects/ChannelProgram/ChannelProgram.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>