force-app/main/default/objects/ChannelProgram/fields/Automate_Members_via_Code__c.field-meta.xml
<CustomField>
    <fullName>Automate_Members_via_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automate Members via Code</label>
    <type>Checkbox</type>
</CustomField>