force-app/main/default/objects/ChannelProgram/fields/AV_Certified_Only_Members__c.field-meta.xml
<CustomField>
    <fullName>AV_Certified_Only_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AV Certified Only Members</label>
    <type>Checkbox</type>
</CustomField>