force-app/main/default/objects/ChannelProgram/fields/Spiff_Type_Specific__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Type_Specific__c</fullName>
    <description>only put a value if the sub category is spiff type and this is used to control who gets access to this program and its attachments</description>
    <label>Spiff Type Specific</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>