force-app/main/default/objects/ChannelProgram/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Spiff Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>