force-app/main/default/objects/ChannelProgram/fields/VS_Region__c.field-meta.xml
<CustomField>
    <fullName>VS_Region__c</fullName>
    <label>VS Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VS_Region</valueSetName>
    </valueSet>
</CustomField>