force-app/main/default/objects/ChannelProgram/fields/VS_SubRegion__c.field-meta.xml
<CustomField>
    <fullName>VS_SubRegion__c</fullName>
    <label>VS SubRegion</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VS_SubRegion</valueSetName>
    </valueSet>
</CustomField>