force-app/main/default/objects/ChannelProgram/listViews/All_Channel_Programs.listView-meta.xml
<ListView>
    <fullName>All_Channel_Programs</fullName>
    <columns>Name</columns>
    <columns>Category</columns>
    <columns>Program_Type__c</columns>
    <columns>Description</columns>
    <columns>IsActive</columns>
    <columns>VS_SubRegion__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Channel Programs</label>
    <language>en_US</language>
</ListView>