force-app/main/default/objects/ChannelProgram/listViews/AV_Channel_Programs.listView-meta.xml
<ListView>
    <fullName>AV_Channel_Programs</fullName>
    <columns>Name</columns>
    <columns>Category</columns>
    <columns>Program_Type__c</columns>
    <columns>Description</columns>
    <columns>Sub_Category__c</columns>
    <columns>IsActive</columns>
    <columns>Country__c</columns>
    <columns>VS_SubRegion__c</columns>
    <columns>Spiff_Type_Specific__c</columns>
    <columns>AV_Certified_Only_Members__c</columns>
    <columns>Automate_Members_via_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category</field>
        <operation>equals</operation>
        <value>AV</value>
    </filters>
    <label>AV Channel Programs</label>
    <language>en_US</language>
</ListView>